--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,36 @@
+html {
+    background-color: rgb(79, 79, 79);
+}
 
+h1 {
+    font-size: 50pt;
+    text-align: center;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+h2 {
+    font-size: 35pt;
+    text-align: center;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+
+button {
+    font-family: 'Courier New', Courier, monospace;
+    font: bolder;
+    text-align: center;
+    border-radius: 15px;
+    border-width: 10;
+    width: 500px;
+    height: 75px;
+    display: block;
+    margin: auto;
+    background-color: rgb(100, 100, 255);
+}
+
+nav {
+    text-decoration: none;
+    list-style: none;
+}
