--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,6 @@ nav {
     margin-top: 25px;
     margin-left: 25px;
     margin-right: 25px;
-    width: 255px;
 }
 
 .topNavInfo {
@@ -103,6 +102,12 @@ nav {
 .fighterImg {
     height: 250px;
     margin-left: 30px;
+    margin-top: 30px;
+}
+
+.enemyImg {
+    height: 250px;
+    margin-right: 30px;
     margin-top: 30px;
 }
 
