--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,13 @@ html {
     background-color: rgb(79, 79, 79);
 }
 
+p {
+    text-align: center;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 15pt;
+}
+
 body {
     overflow: auto;
     display: inline;
